# warning_scraper

./: .gitignore  .gitlab-ci.yml  Borland.py  Cpplint.py  EmbarcaderoClang.py  FileParser.py  Gcc.py  LICENSE.txt  LineParser.py  VisualStudio.py  common_utils.sh  pyproject.toml  readme.md  requirements.txt  run_warning_scraper.sh  util.py  warning_scraper.py
.github/workflows/: ci.yml
template/html/: warnings_by_warning_html.jinja
template/json/: gitlab_code_quality.jinja  readme.md
test/: test_borlandlineparser.py  test_cpplintlineparser.py  test_embarcaderoclanglineparser.py  test_embarcaderoclangmsbuildlineparser.py  test_gcclineparser.py  test_rufflineparser.py  test_util.py  test_visualstudiolineparser.py  test_warning.py
warning_scraper/: Borland.py  Cpplint.py  EmbarcaderoClang.py  EmbarcaderoClangMsbuild.py  FileParser.py  Gcc.py  LineParser.py  Ruff.py  VisualStudio.py  Warning.py  __init__.py  jsondifftool.py  pp_defs.py  util.py  warning_scraper.py
warning_scraper/template/html/: top_html.jinja  warnings_by_file_html.jinja
warning_scraper/template/html/css/: style.css
warning_scraper/template/json/: gitlab_code_quality.jinja  readme.md
