[project]
name = "warning_scraper"
version = "0.2"
description = "A python script to scrape compiler warnings and generate summary reports."
requires-python = ">=3.8"
dependencies = [
  "jinja2==3.1.6",
  "pyparsing==3.3.2",
  "chardet==7.0.0",
]

[project.scripts]
warning_scraper = "warning_scraper:main"

[tool.setuptools.packages.find]
include = ["warning_scraper*"]

[tool.setuptools.package-data]
warning_scraper = ["template/**/*"]
